Ajax lookup for ohip card before registration; Mobile version of the site added

--- a/app/views/layouts/_metatags.html.erb
+++ b/app/views/layouts/_metatags.html.erb
@@ -2,3 +2,4 @@
 <meta name="description" content="OHIP covered telemedicine visits. Prescription renewals. Canada wide.">
 <meta name="robots" content="index, follow">
 <meta name="keywords" content="telemedicine, canadian doctor, online prescriptions, prescriptions over the phone, prescription renewals,online doctor appointments, virtual medicine, virtual medical appointments, online medical consultations, online doctor visits, doctor appointments by phone, ohip covered telemedicine, virtual doctor appointments, OTN, free virtual care, digital walk-in clinic, telemedicine network, ontario telemedicine, clinical telemedicine, family doctor online, get medical advice over the phone, licensed doctor online, caring online doctor ">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
