--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,8 +4,11 @@
   <%= f.full_error :patient_id %> <%#unless f.error :ohip_num %>
   
 <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
-<h3>Patient Registration</h3>
+<h3>Patient Lookup</h3>
 <div class="well">
+
+  <b><font color=green><span id="results"></span></font></b>
+  <p>&nbsp;</p>
 
   <div class="row">
   <div class="col-md-12">
@@ -14,12 +17,12 @@
   </div>
 
   <div class="row">
-  <div class="col-md-12">
-    <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" }%>
+    <div class="col-md-12" id="email" style="display: none" >
+    <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" } %>
   </div>
   </div>
 
-  <div class="row">
+  <div class="row" id="password" style="display: none">
   <div class="col-md-12">
     <%= f.input :password,
                 required: true,
@@ -28,7 +31,7 @@
   </div>
   </div>
               
-  <div class="row">
+  <div class="row" id="password_conf" style="display: none">
   <div class="col-md-12">
     <%= f.input :password_confirmation,
                 required: true,
@@ -36,7 +39,13 @@
   </div>
   </div>
 
-  <div class="row">
+  <div class="row" id='next'> 
+  <div class="col-md-12 col-sm-12">
+    <button type="button" class="btn btn-primary col-md-12 btn-block">Next </button>
+  </div>
+  </div>
+
+  <div class="row" id="submit" style="display: none">
   <div class="col-md-12">
     <%= f.button :submit, "Sign Up", class: "btn btn-primary" %>
   </div>
@@ -51,3 +60,41 @@
 </div>
 </div>
 <% end %>
+
+
+<script>
+$(document).ready(function() {
+
+var ohip_num = document.getElementById("user_ohip_num");
+$(ohip_num).change(function () {
+  if ($(this).val()) {
+     get_patient( $(this).val() );
+//     alert($(this).val());
+  }
+});
+
+  function get_patient ( ohip_num ) {
+        var request = "/patients/get?findstr=" + ohip_num;
+        var aj = $.ajax({
+        url: request,
+        type: 'get',
+        data: $(this).serialize()
+    }).done(function (data) {
+      if (data.lname !== undefined) {
+        result = `Clinic patient:<br> ${data.lname}, ${data.fname} dob:  ${data.dob} :  ${data.addr}`;
+        $("#results").append(result);
+      }
+        $("#email").show();
+        $("#password").show();
+        $("#password_conf").show();
+        $("#submit").show();
+        $("#next").hide();
+      console.log(data);
+    }).fail(function (data) {
+        console.log('AJAX request has FAILED');
+    });
+  }
+
+});
+</script>
+
