--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
   </div>
 
    <div id="footer">
-      <%= render 'layouts/footer'  %>
-      <%# debug(params) if DEBUG_FLAG >0  %>
+     <%= render "layouts/#{device_type}_footer"  %>
+     <%# debug(params) if DEBUG_FLAG >0  %>
    </div>
   </body>
 </html>
