--- a/app/views/layouts/_patient_navigation.html.erb
+++ b/app/views/layouts/_patient_navigation.html.erb
@@ -1,2 +1,4 @@
 <li><%# link_to "<i class='glyphicon glyphicon-log-out'></i> Logout".html_safe, destroy_user_session_path, method: :delete %></li>
+<% if !device_is_desktop? %>
 <li><div style="float:right; margin-right:20px;"><%= link_to "<i class='glyphicon glyphicon-home'></i> Home".html_safe, patient_path(current_user.patient) %></div></li>
+<% end %>
