cosmetic changes - both mobile and desktop versions

--- a/app/views/layouts/_desktop_footer.html.erb
+++ b/app/views/layouts/_desktop_footer.html.erb
@@ -2,7 +2,7 @@
   <small>
     <!--img src="/images/small_logo.png" width="35"></img>-->
     <img src="/favicon.ico" width="16x16"></img>
-    The <a href="<%= project_url %>"><%= full_title %></a> project -  &copy; <%= Date.today.year %> - All rights reserved
+    The <a href="<%= project_url %>">Walk-In EMR </a> -  &copy; <%= Date.today.year %> - All rights reserved
   </small>
   <nav>
     <ul>
