--- a/app/views/visits/_patient_visit.html.erb
+++ b/app/views/visits/_patient_visit.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td><%= link_to visit.date, patient_visit_path(@patient,visit) %></td>
-  <td><%= visit.doctor.lname %></td>
+  <td><%= visit.doctor.lname %>
   <td><%= visit.diag_descr %></td>
   <td>
     <% if visit.status == CANCELLED %>
