patient form simplified

--- a/app/views/patients/_patient_form.html.erb
+++ b/app/views/patients/_patient_form.html.erb
@@ -3,9 +3,11 @@
   <%# render 'shared/error_messages', object: f.object %>
   
   <%= f.hidden_field :pat_type, value: HCP_PATIENT %>
+  <%= f.hidden_field :country, value: 'Canada' %>
+  <%= f.hidden_field :email %>
 
   <!-- Row 1 -->
-
+  
 <div class="row">
   <div class="col-sm-3">
      <%= f.input :lname, hint: 'Required'%>
@@ -37,20 +39,20 @@
   <%= f.input :ohip_num, label: 'Health Card Number', hint: '10 digits, Required ' %>
   </div>
 
-  <div class="col-md-1 col-sm-1 padding-0" id="ohip_ver">
-     <%= f.input :ohip_ver, label: 'Version', hint: "2 letters" %>
+  <div class="col-md-1" id="ohip_ver">
+     <%= f.input :ohip_ver, label: 'Version', hint: "2 letr" %>
   </div>
 
   <div class="col-md-2 col-sm-2" id="hin_prov" >
-  <%= f.input :hin_prov, collection: PROVINCES, label: 'Prov.', include_blank: false %>
+  <%= f.input :hin_prov, collection: PROVINCES, label: 'Card Province', include_blank: false %>
   </div>
   
   <div class="col-md-3 col-sm-3" id="hin_expiry">
-     <%= f.input :hin_expiry, start_year: Date.today.year, end_year: Date.today.year+5, html5: true, label: "Expires On", hint: 'Required' %>
+     <%= f.input :hin_expiry, start_year: Date.today.year, end_year: Date.today.year+5, html5: false, label: "Expires On", hint: 'Required' %>
   </div>
   
   <div class="col-sm-3">
-  <%= f.input :dob, as: :date, start_year: 1915, end_year: Date.today.year, hint: 'Required', html5: true %>
+  <%= f.input :dob, as: :date, start_year: 1915, end_year: Date.today.year, hint: 'Required', html5: false %>
   </div>
   
 </div>
@@ -58,7 +60,7 @@
 <!-- Row 3 -->
 <div class="row">
 
-  <div class="col-sm-4">
+  <div class="col-sm-6">
   <%= f.input :addr, label: 'Srteet Address' %>
   </div>
   
@@ -66,14 +68,10 @@
   <%= f.input :city %>
   </div>
   
-  <div class="col-md-1 col-sm-1 padding-0">
+  <div class="col-md-1 col-sm-1">
   <%= f.input :prov, collection: PROVINCES, include_blank: true %>
   </div>
   
-  <div class="col-sm-2">
-  <%= f.input :country, collection: ['Canada','USA','Other'] %>
-  </div>
-
   <div class="col-sm-2">
   <%= f.input :postal, label: 'Postal/ZIP' %>
   </div>
@@ -82,28 +80,21 @@
 <!-- Row 4 -->
 
 <div class="row">
-  <div class="col-sm-3">
+  <div class="col-sm-2">
   <%# f.input :family_dr, label: 'Family Doctor' #%>
-  <%= f.input :family_dr, label: 'Family Doctor, if known', collection: Doctor.all, hint:'Optional', label_method: :lname, value_method: :lname, prompt: 'Select' %>
+  <%= f.input :family_dr, label: 'Family Doctor', collection: Doctor.all, hint:'Optional', label_method: :lname, value_method: :lname, prompt: 'Select' %>
   </div>
   
-  <div class="col-sm-3">
+  <div class="col-sm-2">
   <%= f.input :phone, as: :tel, label: 'Home Phone', value: num_to_phone(@patient.phone) %>
   </div>
   
-  <div class="col-sm-3">
-  <%= f.input :mobile, as: :tel, value: num_to_phone(@patient.mobile) %>
+  <div class="col-sm-2">
+  <%= f.input :mobile, as: :tel, value: num_to_phone(@patient.mobile), hint: "Optional" %>
   </div>
   
-  <div class="col-sm-3">
-  <%= f.input :email, hint: 'Required', disabled: true %>
-  </div>
-</div>
-
-<!-- Row 5 -->
-<div class="row">
-  <div class="col-sm-3">
-  <%= f.input :pharmacy, label:'Pharmacy name, if known', hint: 'Optional' %>
+  <div class="col-sm-2">
+  <%= f.input :pharmacy, label:'Pharmacy name', hint: 'Optional' %>
   </div>
   
   <div class="col-sm-2">
@@ -111,22 +102,15 @@
   </div>
   
   <div class="col-sm-2">
-  <%= f.input :pharm_fax, as: :tel, label: 'Pharmacy Fax', value: num_to_phone(@patient.pharm_fax), hint: 'Optional' %>
+  <%= f.input :pharm_fax, as: :tel, label: 'Pharm. Fax', value: num_to_phone(@patient.pharm_fax), hint: 'Optional' %>
   </div>
   
-  <div class="col-sm-3">
-  <%= f.input :alt_contact_name, label: 'Emergency Contact', hint:'Optional' %>
-  </div>
-
-  <div class="col-sm-2">
-  <%= f.input :alt_contact_phone, as: :tel, label: "Contact's phone", hint: 'Optional' %>
-  </div>
 </div>
   
 <!-- Row 6 -->  
 <div class="row">
   <div class="col-sm-12">
-  <%= f.input :allergies, label: 'Allergies, if present', hint: 'Optional'  %>
+  <%= f.input :allergies, label: 'Allergies, if any', hint: 'Optional'  %>
   </div>
 </div>
 
