--- a/app/views/patients/_patient_show.html.erb
+++ b/app/views/patients/_patient_show.html.erb
@@ -15,7 +15,7 @@
 <% end %>
 <b><%= @patient.full_name %>: <%= "(#{@patient.maid_name})" if @patient.maid_name %></b> <%= @patient.age_str %> <%= @patient.full_sex %>; 
 Born: <%= @patient.dob %><% if @patient.chart.present? %> <%= link_to '<i class="glyphicon glyphicon-copy"></i>'.html_safe, chart_patient_path(@patient) %> <% end %>
-<%= "Phone: #{num_to_phone(@patient.phone)}" if @patient.phone.present? %><%= "Mobile: #{num_to_phone(@patient.mobile)}" if @patient.mobile.present? %> <%= "Email: #{@patient.email}" if @patient.email.present? %> 
+<%= "Phone: #{num_to_phone(@patient.phone)}" if @patient.phone.present? %> <%= "Mobile: #{num_to_phone(@patient.mobile)}" if @patient.mobile.present? %> <%= "Email: #{@patient.email}" if @patient.email.present? %> 
 <%= "Address: #{@patient.addr_full}" if @patient.addr.present? %> 
 <% if @patient.allergies.present? %>
 Allergies: <%= @patient.allergies %>
@@ -33,21 +33,24 @@ Medications:
 &nbsp; <%# render("letters", remote: remote) if @patient.letters.any? %>
 &nbsp; <%# render("referrals", remote: remote) if @patient.referrals.any? %>
 &nbsp; <%# render("patient_docs", remote: remote) if @patient.patient_docs.any? %>
-<p>&nbsp;</p>
 
 <% if @patient.visits.count == 0 %>
+  <p>&nbsp;</p>
   <p><b>  Welcome to our virtual clinic, <%= @patient.fname %>! You are all set for your first doctor appointment.</b></p>
 <% end %>
 
-<p><b> If you would like to speak with doctor, please click the button below. Describe the reason for your virtual visit, upload any documents/pictures and save it. Dr. Ostapenko will get in touch with you as soon as she can. As usual, appointments are handled on first come - first served basis. This service is covered by OHIP.  </b></p>
+<p><b> If you would like to speak with doctor, please click the button below. Describe the reason for your virtual visit, upload any documents/pictures and save it. Dr. Ostapenko will get in touch with you as soon as she can. As usual, appointments are handled on first come - first served basis. This service is covered by OHIP.*  </b></p>
 
 <% disabled = @patient.visits.first.date.today? rescue false %>
-<div class="col-sm-2 col-md-6 col-md-offset-3 col-sm-offset-3">
+<div class="col-sm-2 col-md-8 col-md-offset-2 col-sm-offset-3">
 <%= button_to 'Yes, I would like callback from doctor', new_patient_visit_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class:"btn btn-primary btn-lg", method: 'get', disabled: disabled  %>
 </div>
 
   </section>
+  <div style="float:right"><small>* Only one appointment per patient per day is allowed by OHIP </small></div>
 </aside>
+
+<div class="spacer-20"></div>
 
 <%= render "#{current_user.role}_visits" %>
 
