medication table removed from patient view

--- a/app/views/visits/_patient_form.html.erb
+++ b/app/views/visits/_patient_form.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div class="col-sm-2">
-  <%= f.input :bp, as: :string, label:'Blood Pressure (H/L)', hint:'Optional' %>
+  <%= f.input :bp, as: :string, label:'Blood Pr. (H/L)', hint:'Optional' %>
   </div>
 
   <div class="col-sm-2">
