--- a/app/views/patients/_patient_show.html.erb
+++ b/app/views/patients/_patient_show.html.erb
@@ -27,7 +27,7 @@ Medications:
 <% end %> </b>
 </pre>
 	 
-&nbsp; <%= render("medications", remote: remote) if @patient.medications.any? %>
+&nbsp; <%# render("medications", remote: remote) if @patient.medications.any? %>
 &nbsp; <%# render("prescriptions", remote: remote) if @patient.prescriptions.any? %>
 &nbsp; <%# render("invoices", remote: remote) if @patient.invoices.any? %>
 &nbsp; <%# render("letters", remote: remote) if @patient.letters.any? %>
