--- a/app/views/patients/_patient_form.html.erb
+++ b/app/views/patients/_patient_form.html.erb
@@ -36,7 +36,7 @@
   </div>
 
   <div class="col-sm-3" id="ohip_number">
-  <%= f.input :ohip_num, label: 'Health Card Number', hint: '10 digits, Required ' %>
+  <%= f.input :ohip_num, label: 'Health Card Number', hint: 'Required ' %>
   </div>
 
   <div class="col-md-1" id="ohip_ver">
