--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -10,9 +10,9 @@
 
 <div style="padding:10px;">
 <font size=4>
-  <p> Don't want to stay in a busy waiting room during pandemic? You don't have to. You can now call a doctor and discuss your medical issue or renew your medication.</p>
-  <p> Simply register with your OHIP card, confirm your email and login to make your first telephone appointment with a doctor right away. </p>
-    
+ <p> Don't want to stay in a busy waiting room during pandemic? You don't have to. You can now discuss your medical issue with a doctor as well as  renew your medication over the phone.</p>
+  <p> Simply register with your OHIP card, confirm your email and login to make your first telephone appointment. Once registered, you will have access to your patient record and visit history. Our clinic served over 65000 patients over the last 15 years. </p>
+
 <div class='spacer-10'></div>
 <div align="center"> <%= link_to 'Yes! I want to talk to a doctor', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div>
 <div class='spacer-20'></div>
