--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -10,7 +10,7 @@
 %>
 
 <div id='page'>
-<table class="tbl2 table-hover table-striped table-bordered" >
+<table class="tbl2 table-hover table-bordered" >
   <thead>
       <tr>
 	  <th class="tbl_xs"></th>
