--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, @patient.full_name) %>
 
+<p>&nbsp;</p>
 <h2><%= @patient.full_name %> :  Patient Profile &nbsp; 
 <% if device_is_desktop? %>
   <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_patient_path(@patient), remote: true, 'data-toggle': "modal", 'data-target': '#modal-window', onclick: "set_lg_modal()" %>
