--- a/app/views/visits/_admin_form.html.erb
+++ b/app/views/visits/_admin_form.html.erb
@@ -51,7 +51,7 @@
 
   <div class="col-sm-2">
   <%= f.label "Service" %> <span class='form-text text-muted' id='svc'></span>
-  <%= f.input :proc_code, collection: @procedures, label_method: :code, value_method: :code, prompt: 'Select', label: false, include_blank: 'None', hint: 'Required', selected: 'K081A' %> 
+  <%= f.input :proc_code, collection: @procedures, label_method: :code, value_method: :code, prompt: 'Select', label: false, include_blank: 'None', hint: 'Required' %> 
   </div>
 
   <div class="col-sm-2"> 
@@ -74,7 +74,7 @@
 
 <div class="row">
   <div class="col-sm-4">
-  <%=  f.input :diag_code, collection: get_active_diagnoses, label_method: :descr_with_code, value_method: :code, prompt: 'Select', label: :Diagnosis %> 
+  <%=  f.input :diag_code, collection: get_active_diagnoses, label_method: :descr_with_code, value_method: :code, prompt: 'Select', include_blank: 'None', label: :Diagnosis %> 
   </div>
 
   <div class="col-sm-2">
