--- a/app/views/layouts/_admin_navigation.html.erb
+++ b/app/views/layouts/_admin_navigation.html.erb
@@ -4,8 +4,8 @@
   <% elsif !%w( visits users static_pages password_resets patient_docs).include?(controller_name) %>
     <%= render 'layouts/find' %>
   <% end %>
-  <li class="<%= 'active' if controller_name == 'patients' %>"><%= link_to "Patients", patients_path %></li>
-  <li class="<%= 'active' if controller_name == 'daysheet' %>"><%= link_to "Day Sheet", daysheet_path %></li>
+  <li class="nav-item <%= 'active' if controller_name == 'patients' %>"><%= link_to "Patients", patients_path %></li>
+  <li class="nav-item <%= 'active' if controller_name == 'daysheet' %>"><%= link_to "Day Sheet", daysheet_path %></li>
   <%= render 'layouts/billing' %>
   <%= render 'layouts/docs' %>
   <%= render 'layouts/ref' %>
