Patients link added to doctors pages

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
 
   <div class="row">
   <div class="col-md-12">
-    <%= f.input :ohip_num, label: 'Your Health Card Number', autofocus: true, input_html: { autocomplete: "ohip_num"}  %>
+    <%= f.input :ohip_num, label: 'Your Health Card Number', autofocus: true %>
   </div>
   </div>
 
